# tomatex

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: main.yml
contrib/: env.sample
tomatex/: asgi.py  settings.py  urls.py  wsgi.py
tomatex/core/: managers.py  models.py  serializers.py  urls.py  views.py
tomatex/core/migrations/: 0001_initial.py  0002_pomodoro.py
tomatex/core/tests/: conftest.py  test_models.py  test_serializers.py  test_views.py
